; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_setopt.c_tool_setopt_mimepost.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_setopt.c_tool_setopt_mimepost.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.GlobalConfig = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"curl_easy_setopt(hnd, %s, mime%d);\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tool_setopt_mimepost(i32* %0, %struct.GlobalConfig* %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.GlobalConfig*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.GlobalConfig* %1, %struct.GlobalConfig** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32*, i32** %10, align 8
  %16 = call i64 @curl_easy_setopt(i32* %13, i32 %14, i32* %15)
  store i64 %16, i64* %11, align 8
  store i32 0, i32* %12, align 4
  %17 = load i64, i64* %11, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %40, label %19

19:                                               ; preds = %5
  %20 = load %struct.GlobalConfig*, %struct.GlobalConfig** %7, align 8
  %21 = getelementptr inbounds %struct.GlobalConfig, %struct.GlobalConfig* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %40

24:                                               ; preds = %19
  %25 = load i32*, i32** %6, align 8
  %26 = load %struct.GlobalConfig*, %struct.GlobalConfig** %7, align 8
  %27 = load %struct.GlobalConfig*, %struct.GlobalConfig** %7, align 8
  %28 = getelementptr inbounds %struct.GlobalConfig, %struct.GlobalConfig* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @libcurl_generate_mime(i32* %25, %struct.GlobalConfig* %26, i32 %31, i32* %12)
  store i64 %32, i64* %11, align 8
  %33 = load i64, i64* %11, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %39, label %35

35:                                               ; preds = %24
  %36 = load i8*, i8** %8, align 8
  %37 = load i32, i32* %12, align 4
  %38 = call i32 @CODE2(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %36, i32 %37)
  br label %39

39:                                               ; preds = %35, %24
  br label %40

40:                                               ; preds = %39, %19, %5
  br label %41

41:                                               ; preds = %40
  %42 = load i64, i64* %11, align 8
  ret i64 %42
}

declare dso_local i64 @curl_easy_setopt(i32*, i32, i32*) #1

declare dso_local i64 @libcurl_generate_mime(i32*, %struct.GlobalConfig*, i32, i32*) #1

declare dso_local i32 @CODE2(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
